--- a/app/src/main/res/layout/result_search_row.xml
+++ b/app/src/main/res/layout/result_search_row.xml
@@ -1,34 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content">
-
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="45dp"
+    android:orientation="horizontal"
+    android:weightSum="1">
+    <TextView
+        android:id="@id/torrent_title"
+        android:layout_width="0dp"
+        android:layout_weight="0.75"
+        android:layout_height="fill_parent"
+        android:textSize="12sp"
+        android:text="Two and a Half Men S11E22 HDTV x264dsdsdsdsdsds"
+        android:ellipsize="end"
+        android:singleLine="true"
+        android:paddingRight="3sp"
+        android:paddingLeft="3sp"
+        android:gravity="center_vertical"/>
     <LinearLayout
-        android:layout_width="fill_parent"
-        android:layout_height="50dp">
+        android:layout_width="0dp"
+        android:layout_weight="0.25"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:gravity="right">
 
-        <TextView
-            android:id="@id/torrent_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="15sp"
-            android:text="Torrent title"
-            android:layout_marginLeft="10sp"
-            android:layout_alignParentTop="true"/>
-    </LinearLayout>
-    <LinearLayout
-            android:layout_width="fill_parent"
-            android:layout_height="10dp">
+        <ImageView
+            android:id="@id/download_icon"
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent"
+            android:src="@drawable/ic_action_download"
+            android:layout_toRightOf="@id/torrent_title"
+            android:layout_alignParentRight="true"/>
         <TextView
             android:id="@id/torrent_size"
-            android:layout_width="wrap_content"
+            android:layout_width="fill_parent"
+            android:gravity="center_horizontal"
             android:layout_height="wrap_content"
-            android:textSize="10sp"
-            android:text="Torrent size"
-            android:textColor="#ffd07f"
-            android:layout_alignParentTop="false"
-            android:layout_alignParentBottom="true"/>
+            android:layout_below="@+id/download_icon"
+            android:layout_alignParentRight="true"
+            android:textSize="11sp"
+            android:text="183.89 MiB"
+            android:textStyle="italic"
+            android:textColor="#FA8F02"/>
+        </LinearLayout>
     </LinearLayout>
-
-</RelativeLayout>
