--- a/app/src/main/res/layout/result_search_row.xml
+++ b/app/src/main/res/layout/result_search_row.xml
@@ -1,46 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_height="45dp"
-    android:orientation="horizontal"
-    android:weightSum="1">
+    android:layout_width="match_parent">
     <TextView
         android:id="@id/torrent_title"
         android:layout_width="0dp"
-        android:layout_weight="0.75"
+        android:layout_alignParentLeft="true"
         android:layout_height="fill_parent"
         android:textSize="12sp"
-        android:text="Two and a Half Men S11E22 HDTV x264dsdsdsdsdsds"
-        android:ellipsize="end"
-        android:singleLine="true"
-        android:paddingRight="3sp"
-        android:paddingLeft="3sp"
-        android:gravity="center_vertical"/>
-    <LinearLayout
-        android:layout_width="0dp"
-        android:layout_weight="0.25"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="right">
+        android:text="Two and a Half Men S11E22 Two and a Half Men S11E22 Two and a Half Men S11E22"
+        android:gravity="fill_horizontal"/>
+    <ImageView
+        android:id="@id/download_icon"
+        android:layout_width="100dp"
+        android:layout_height="31dp"
+        android:layout_toRightOf="@id/torrent_title"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/ic_action_download"/>
+    <TextView
+        android:id="@id/torrent_size"
+        android:layout_width="100dp"
+        android:layout_height="14dp"
+        android:gravity="center_horizontal"
+        android:layout_toRightOf="@id/torrent_title"
+        android:layout_alignParentRight="true"
+        android:layout_below="@+id/download_icon"
+        android:textSize="11sp"
+        android:text="183.89 MiB"
+        android:textStyle="italic"
+        android:textColor="#FA8F02"/>
+</RelativeLayout>
 
+<!--<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="45dp"
+    android:orientation="horizontal">
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="45dp"
+        android:layout_width="0dp"
+        android:layout_weight="0.7">
+    <TextView
+        android:id="@id/torrent_title"
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:textSize="12sp"
+        android:text="Two and a Half Men S11E22 Two and a Half Men S11E22 Two and a Half Men S11E22"
+        android:gravity="fill_horizontal"/>
+    </RelativeLayout>
+
+    <RelativeLayout
+        xmlns:android="http://schemas.android.com/apk/res/android"
+        android:layout_height="45dp"
+        android:layout_width="0dp"
+        android:layout_weight="0.2">
         <ImageView
             android:id="@id/download_icon"
             android:layout_width="match_parent"
-            android:layout_height="fill_parent"
-            android:src="@drawable/ic_action_download"
-            android:layout_toRightOf="@id/torrent_title"
-            android:layout_alignParentRight="true"/>
+            android:layout_height="31dp"
+            android:src="@drawable/ic_action_download"/>
         <TextView
             android:id="@id/torrent_size"
-            android:layout_width="fill_parent"
+            android:layout_width="match_parent"
             android:gravity="center_horizontal"
-            android:layout_height="wrap_content"
+            android:layout_height="14dp"
             android:layout_below="@+id/download_icon"
-            android:layout_alignParentRight="true"
             android:textSize="11sp"
             android:text="183.89 MiB"
             android:textStyle="italic"
             android:textColor="#FA8F02"/>
-        </LinearLayout>
-    </LinearLayout>
+        </RelativeLayout>
+</LinearLayout>-->
