layout categories suite

--- a/app/src/main/res/layout/clickable_category.xml
+++ b/app/src/main/res/layout/clickable_category.xml
@@ -1,7 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-</LinearLayout>
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent" android:layout_height="40dp"
+    android:minHeight="40dp"
+    android:background="@android:color/darker_gray">
+    <TextView
+        android:id="@+id/category_name"
+        android:textColor="#fffdfdfd"
+        android:layout_width="match_parent"
+        android:layout_height="fill_parent"
+        android:text="APPLICATION"
+        android:layout_alignParentLeft="true"
+        android:gravity="center_vertical"
+        android:paddingLeft="15dp"
+        android:paddingRight="1dp"
+        android:textStyle="bold"/>
+</RelativeLayout>
