--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.remimichel.activities.MainActivity"
-    android:clickable="true">
+    android:clickable="true"
+    android:id="@id/main_activity">
     <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
