--- a/app/src/main/res/values/ids.xml
+++ b/app/src/main/res/values/ids.xml
@@ -3,4 +3,6 @@
     <item name="torrent_title" type="id" />
     <item name="torrent_size" type="id" />
     <item name="download_icon" type="id" />
+    <item name="main_activity" type="id">main_activity</item>
+    <item name="searchable_activity" type="id">searchable_activity</item>
 </resources>
