--- a/app/src/main/res/layout/download_item.xml
+++ b/app/src/main/res/layout/download_item.xml
@@ -6,22 +6,46 @@
     <TextView
         android:id="@+id/download_name"
         android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:text="Divergent.2014.FRENCH.DVDrip.blouson"
+        android:layout_height="30dp"
+        android:text="Divergent.2014.FRENCH.DVDrip.blousondsdsdsds"
         android:layout_alignParentLeft="true"
         android:layout_toLeftOf="@+id/download_percent_done"
         android:gravity="center_vertical"
-        android:paddingLeft="15dp"
-        android:paddingRight="1dp"/>
+        android:singleLine="true"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"/>
     <TextView
+        android:id="@+id/download_download_rate"
+        android:layout_width="100dp"
+        android:layout_height="15dp"
+        android:text="down:"
+        android:textSize="10sp"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
+        android:layout_below="@+id/download_name"
+        android:textColor="#ffc1c0c3"
+        android:textStyle="bold"/>
+    <TextView
+        android:id="@+id/download_upload_rate"
+        android:layout_width="100dp"
+        android:layout_height="15dp"
+        android:text="up:"
+        android:textSize="10sp"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
+        android:layout_below="@+id/download_name"
+        android:layout_toRightOf="@+id/download_download_rate"
+        android:layout_toLeftOf="@+id/download_percent_done"
+        android:textColor="#ffc1c0c3"
+        android:textStyle="bold"/>
+    <ProgressBar
         android:id="@+id/download_percent_done"
-        android:layout_width="150dp"
-        android:layout_height="match_parent"
-        android:text="60%"
-        android:layout_alignParentRight="true"
-        android:gravity="center_vertical"
-        android:paddingLeft="15dp"
-        android:paddingRight="1dp"/>
+        android:layout_centerInParent="true"
+        android:background="#FFFFFF"
+        style="@android:style/Widget.ProgressBar.Horizontal"
+        android:layout_width="100dp"
+        android:layout_height="30dp"
+        android:layout_alignParentRight="true"/>
 
 
 
