--- a/app/src/main/res/layout/download_item.xml
+++ b/app/src/main/res/layout/download_item.xml
@@ -40,12 +40,24 @@
         android:textStyle="bold"/>
     <ProgressBar
         android:id="@+id/download_percent_done"
-        android:layout_centerInParent="true"
         android:background="#FFFFFF"
         style="@android:style/Widget.ProgressBar.Horizontal"
         android:layout_width="100dp"
-        android:layout_height="30dp"
+        android:layout_height="27dp"
+        android:layout_marginTop="3dp"
         android:layout_alignParentRight="true"/>
+    <TextView
+        android:id="@+id/download_size"
+        android:layout_width="100dp"
+        android:layout_height="15dp"
+        android:text="size:"
+        android:textSize="10sp"
+        android:paddingLeft="3dp"
+        android:paddingRight="3dp"
+        android:layout_below="@+id/download_percent_done"
+        android:layout_toRightOf="@+id/download_upload_rate"
+        android:textColor="#ffc1c0c3"
+        android:textStyle="bold"/>
 
 
 
