--- a/app/src/main/res/layout/no_clickable_category.xml
+++ b/app/src/main/res/layout/no_clickable_category.xml
@@ -1,27 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:padding="8dp"
+    android:background="#FFFFFF">
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="45dp"
-    android:minHeight="45dp"
-    android:background="@android:color/background_dark">
-    <TextView
-        android:id="@+id/category_name"
-        android:textColor="#fffdfdfd"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:text="APPLICATION"
-        android:layout_alignParentLeft="true"
-        android:layout_toLeftOf="@+id/category_expand"
-        android:gravity="center_vertical"
-        android:paddingLeft="15dp"
-        android:paddingRight="1dp"
-        android:textStyle="bold"/>
     <ImageView
-        android:id="@+id/category_expand"
-        android:layout_width="100dp"
-        android:layout_height="match_parent"
-        android:layout_alignParentRight="true"
+        android:id="@+id/expand_icon"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:src="@drawable/ic_action_expand"/>
 
+    <TextView
+        android:id="@+id/category_name"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:paddingLeft="?android:attr/expandableListPreferredItemPaddingLeft"
+        android:textSize="17dp"
+        android:textColor="#000000" />
 
-</RelativeLayout>
+</LinearLayout>
