--- a/app/src/main/res/layout/activity_searchable.xml
+++ b/app/src/main/res/layout/activity_searchable.xml
@@ -1,11 +1,7 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context="com.remimichel.activities.SearchableActivity"
     android:orientation="vertical"
     android:id="@id/searchable_activity">
@@ -19,5 +15,15 @@
         android:layout_alignParentTop="true"
         android:cacheColorHint="#00000000"
         android:layout_weight="1"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
         android:fadingEdge="none"/>
-</LinearLayout>
+    <ListView android:id="@+id/left_drawer"
+        android:layout_width="240dp"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        android:choiceMode="singleChoice"
+        android:divider="@android:color/transparent"
+        android:dividerHeight="0dp"
+        android:background="#111"/>
+</android.support.v4.widget.DrawerLayout>
